--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="cabeçalho-esquerda">
             <ul class="cabeçalho-esquerda-itens">
-                <li><a href="#" class="itens-esquerda" >Home</a></li>
+                <li><a href="inicio.html" class="itens-esquerda" >Home</a></li>
                 <li><a href="#" class="itens-esquerda" >Tv Shows</a></li>
                 <li><a href="#" class="itens-esquerda" >Movies</a></li>
                 <li><a href="#" class="itens-esquerda" >New e Popular</a></li>
